--- a/src/containers/css/RecipePage.css
+++ b/src/containers/css/RecipePage.css
@@ -2,9 +2,10 @@
     /* float: left; */
     display: flex;
     justify-content: flex-start;
+    padding: 10px;
     width: 100%;
 }
 
-.recipe-page {
+/* .recipe-page {
     background-color: rgb(203, 251, 245);
-}
+} */
