--- a/src/containers/css/RecipePage.css
+++ b/src/containers/css/RecipePage.css
@@ -1,11 +1,11 @@
 .header {
-    /* float: left; */
     padding: 10px;
-    width: 70%;
+    width: 100%;
     font-family: 'Penna';
     font-size: 60px;
     font-weight: 900;
     margin-left: 400px;
+    text-align: center;
 }
 
 .recipe-page {
@@ -16,34 +16,26 @@
 }
 
 .header-and-image {
-    margin-left: 80px;
+    width: 80%;
 }
 
 .rec-image {
     border-radius: 50px;
-    margin-left: 270px;
-}
-
-.ingredients {
-    color: rgb(46, 46, 46);
-    width: 30%;
-    background-color: linen;
-    margin-left: 960px;
-    margin-top: -370px;
-    border-radius: 80px;
-
-}
-
-.instructions {
-    color: rgb(46, 46, 46);
-    width: 40%;
-    margin-left: 342px;
-    margin-top: -340px;
 }
 
 .rec-drp {
-    margin-left: 400px;
-    width: 100%;
+    margin-left: 650px;
+    width: 120%;
     margin-bottom: 24px;
     margin-top: -10px;
+}
+
+.card {
+    padding: 0px;
+    margin-left: 180px;
+}
+
+.hiddenasf {
+    height: 100vh;
+    visibility: hidden;
 }
