--- a/src/containers/css/Home.css
+++ b/src/containers/css/Home.css
@@ -1,22 +1,25 @@
-.WelcomeBanner {
-    background: url("../assets/login backgroud.jpeg") no-repeat center center fixed;
-    min-height: 93vh;
-    min-width: 100vh;
-    width: 100%;
-    height: 100%;
-    background-size: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.Banner {
+    font-family: 'Penna';
+    width: 40%;
+    margin-top: -6%;
+    text-align: center;
+    font-size: 90px;
+    font-weight: 700;
+    margin-left: -30px;
 }
 
-.Sign-Up-Title {
-   text-align: center;
+.Card {
+    padding: 4vh;
+    margin-left: -30px;
 }
 
 label {
     padding-right: 6px;
+}
+
+.Sign-Up-Title {
+   text-align: center;
+   font-size: 25px;
 }
 
 .Submit-Button {
@@ -33,26 +36,37 @@ label {
     background-color: #90a885;
 }
 
+.Submit-Button:focus {
+    background-color:#5b6954 ;
+}
+
 .Submit-Button:hover {
     background-color:#809476 ;
     border-color: rgb(0, 128, 38);
 }
 
-.Submit-Button:focus {
-    background-color:#5b6954 ;
+.Submit-Form {
+    padding-bottom: 10px;
 }
 
-.Other-Button {
+.Submit-Label {
+    padding-right: 10px;
+}
+
+.Switch-Button {
     margin: 0;
     width: 75%;
 }
 
-.Banner {
-    font-family: 'Penna';
-    width: 70%;
-    margin-top: -6%;
-    text-align: center;
-    font-size: 90px;
-    font-weight: 700;
-    margin-left: -30px;
+.WelcomeBanner {
+    background: url("../assets/login backgroud.jpeg") no-repeat center center fixed;
+    min-height: 93vh;
+    min-width: 100vh;
+    width: 100%;
+    height: 100%;
+    background-size: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
